fixed gap between about and contact section

--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,7 @@ header h1, header h3 {
 header h1 {
     font-size: 130px;
     font-weight: 400;
+    margin-bottom: 30px;
 }
 
 header h3 {
@@ -124,6 +125,7 @@ header h3 {
 #contact h4 {
     text-align: center;
     font-size: 30px;
+    margin: 0;
 }
 
 #contact h5 {
